# scrapddl

./: .gitignore  LICENSE  Makefile  README.md  README.rst  check_urls.py  crawler.py  main.py  pyproject.toml  render.py  requirements.pip  run.sh.dist  scrapy.cfg  settings.py  setup.py
.github/workflows/: check-urls.yml  tests.yml
items/: items.py
requirements/: develop.pip  runtime.pip
scrapddl/: cache.py  main.py  process.py  settings.py
scrapddl/items/: items.py
scrapddl/spiders/: __init__.py  annuaire_telechargement.py  base.py  ddl_island.py  extreme_down.py  factory.py  golden_kai.py  imdb.py  old_golden_kai_old.py  rarbg.py  tirexo.py  univers_anime.py  wawacity.py  zone_telechargement.py
scrapddl/static/: carousel.js  home_fetch.js  imdb_fetch.js  main.css
scrapddl/templates/: ___imdb_rating.html  __item.html  _items.html  base.html  home.html  imdb_rating.html  item.html  items.html  js_home.html  mangas.html  movies.html  tvshows.html
scrapddl/tests/: test_base_spider.py  test_clean_title.py  test_http_integration.py  test_items.py  test_process.py  test_routes.py  test_spiders_generic.py
spiders/: extreme_down.py
static/: main.css
templates/: home.html  index.xml  movies.xml
